# RustQuake

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: data_paths.example.toml
crates/qw-audio/: Cargo.toml
crates/qw-audio/src/: lib.rs
crates/qw-client/: Cargo.toml
crates/qw-client/src/: cli.rs  client.rs  config.rs  handshake.rs  input.rs  main.rs  model_cache.rs  net.rs  prediction.rs  runner.rs  session.rs  sound.rs  state.rs
crates/qw-common/: Cargo.toml
crates/qw-common/src/: bsp.rs  bsp_render.rs  clc.rs  client_messages.rs  collision.rs  com_checksum.rs  com_parse.rs  com_path.rs  crc.rs  cvar.rs  data_paths.rs  defs.rs  entities.rs  info.rs  lib.rs  md4.rs  mdl.rs  msg.rs  netaddr.rs  netchan.rs  oob.rs  pak.rs  palette.rs  pcx.rs  protocol.rs  spr.rs  svc.rs  types.rs  vfs.rs  wad.rs
crates/qw-qc/: Cargo.toml
crates/qw-qc/src/: lib.rs
crates/qw-renderer/: Cargo.toml
crates/qw-renderer-gl/: Cargo.toml
crates/qw-renderer-gl/src/: lib.rs
crates/qw-renderer/src/: lib.rs
crates/qw-server/: Cargo.toml
crates/qw-server/src/: main.rs  qc.rs
crates/qw-window-glfw/: Cargo.toml
crates/qw-window-glfw/src/: glfw_backend.rs  lib.rs  stub.rs
docs/: data-paths.md  porting-notes.md  upstream.md
