[package]
name = "qw-client"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
qw-audio = { path = "../qw-audio" }
qw-common = { path = "../qw-common" }
qw-renderer = { path = "../qw-renderer" }
qw-renderer-gl = { path = "../qw-renderer-gl" }
qw-window-glfw = { path = "../qw-window-glfw" }

[features]
default = []
glow = ["qw-renderer-gl/glow", "qw-window-glfw/glfw"]
